2001-05-11  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c (ms_excel_read_workbook) : clear the global handle
	  after it is closed.

2001-05-11  Almer S. Tigelaar  <almer@gnome.org>

	* ms-excel-write.c (write_sheet_bools): Write dimensions as
	unsigned integers.
	(biff_put_text): Signedness.
	(write_externsheets): Signedness.
	(excel_font_to_string): Signedness.
	(fonts_free): Signedness.
	(write_formats): Signedness.
	(xf_free): Signedness.
	(pre_cell): Signedness + Unused variabele.
	(gather_styles): Signedness.
	(map_pattern_index_to_excel): Signedness.
	(write_index): Signedness.
	(write_block): Signedness.
	(write_sheet): Signedness.
	(free_workbook): Signedness.
	(write_workbook): Signedness.
	(check_sheet): Signedness.

	* ms-excel-formula-write (write_node): Cast untyped pointer.

2001-05-07  Jody Goldberg <jgoldberg@home.com>

	* ms-escher.c (ms_escher_get_data) : suppress warnings.
	(ms_escher_read_ClientTextbox) : no side effects in precondition.

	* ms-excel-read.c (ms_excel_formula_shared) : ditto.

2001-05-06  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c (biff_boundsheet_data_new) : merge in the last of
	  the i18n patches.

2001-05-05  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c (ms_excel_set_xf_segment) : support multiple rows.
	(ms_excel_read_row) : use here.
	(ms_excel_read_cell) : and here.
	(ms_excel_read_colinfo) : start using it here too.
	(ms_sheet_obj_create) : Add a place holder for a spinner.

	* ms-excel-write.c (pre_cell) : XL does not differentiate between
	  parse and display formats.  When exporting a cell with General that
	  has a parse format create a new XF with the parse format as the
	  display format.

2001-04-30  Morten Welinder  <terra@diku.dk>

	* ms-summary.c (sum_name_to_excel): Fix index count.  Constify.
  	Make static.
	(excel_to_gnum_mapping): Make static.

2001-04-29  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-write.c (write_window2) : Headers are in default style.