@@ -1,3 +1,11 @@
+2001-05-13  Michael Meeks  <michael@ximian.com>
+
+	* ms-excel-write.c (write_value): commit the VALUE_EMPTY.
+
+	* ms-biff.c (ms_biff_put_len_next),
+	(ms_biff_put_var_next): add conditional debug to help catch
+	similar problems - none obvious just now.
+
 2001-05-11  Jody Goldberg <jgoldberg@home.com>
 
 	* ms-excel-read.c (ms_excel_read_workbook) : clear the global handle
